# investigator

./: .gitignore  Cargo.toml
investigator/tui/: Cargo.toml
investigator/tui/src/: main.rs
server/: .env  .gitignore  Cargo.toml
server/migrations/2021-05-01-000000_identities/: down.sql  up.sql
server/migrations/2021-05-02-000000_assets/: down.sql  up.sql
server/migrations/2021-05-03-000000_prices/: up.sql
server/migrations/2021-05-29-060750_create_coins/: down.sql  up.sql
server/migrations/2021-06-01-055037_identities/: up.sql
server/migrations/2021-06-03-034117_wallets/: down.sql  up.sql
server/migrations/2021-06-03-063617_markets/: up.sql
server/migrations/2021-06-03-063617_portfolios/: down.sql  up.sql
server/migrations/2021-06-15-063511_assets_info/: down.sql  up.sql
server/res/: coins.toml  exchanges.toml  prices.toml  supported_coins.toml  wallets.toml
server/res/oracle/: prices.toml  supported_coins.toml  wallets.toml
server/src/: commands.rs  lib.rs  main.rs  model.rs  server.rs
server/src/account/: mod.rs  portfolio.rs  server.rs  strategy.rs  target.rs  watchlist.rs
server/src/api/: assets.rs  mod.rs  prices.rs
server/src/asset/: api.rs  commands.rs  db.rs
server/src/commands/: assets.rs  coins.rs  markets.rs  mod.rs  prices.rs  wallets.rs
server/src/db/: assets.rs  markets.rs  mod.rs  prices.rs  schema.rs
server/src/identity/: commands.rs  db.rs  mod.rs  models.rs
server/src/models/: assets.rs  markets.rs  mod.rs
server/src/old_api/: markets.rs
server/src/old_commands/: identities.rs  mod.rs
src/: app.rs  main.rs  (+4 more)
(+181 files in other folders)
