[package]
name = "investigator-server"
version = "0.1.0"
authors = ["Zibi Braniecki <zibi@braniecki.net>"]
edition = "2018"

[dependencies]
actix-web = { version = "3", features = ["rustls"] }
actix-cors = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
