[package]
name = "investigator-server"
version = "0.1.0"
authors = ["Zibi Braniecki <zibi@braniecki.net>"]
edition = "2018"

[dependencies]
actix-web = { version = "3", features = ["rustls"] }
actix-cors = "0.5"
diesel = { version = "1.4.4", features = ["sqlite", "postgres", "chrono"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "0.2", features = ["time"] }
