[package]
name = "investigator"
version = "0.1.0"
authors = ["Zibi Braniecki <zibi@braniecki.net>"]
edition = "2018"


[dependencies]
tui = "0.14"
termion = "1.5"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
float-pretty-print = "0.1.0"
toml = "0.5"
